src/snapshots/kk__tests__compiler__typecheck__unify_function_branches_3.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Boolean = #true #false
let result = \x => x.(
  \#true => 1
  \#false => 'yo'
)()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unify_function_branches_3.kk:4:3
  │
4 │   \#false => 'yo'
  │   ^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    |   \(          |   \(        |
    |     Boolean   |     Boolean |
    |   ) =>        |   ) =>      |
    | -   number    | +   string  |
    +---------------+-------------+
